data/derived/sp14/progs/unify/prog1391.ml.out
Characters 327-332:
  | Times  (x,y)  -> Printf.sprintf "e*e" (exprToString x) (exprToString y)
                                    ^^^^^
Error: This expression has type
         ('a -> 'b -> 'c, unit, string, string, string, 'a -> 'b -> 'c)
         CamlinternalFormatBasics.fmt
       but an expression was expected of type
         ('a -> 'b -> 'c, unit, string, string, string, string)
         CamlinternalFormatBasics.fmt
       Type 'a -> 'b -> 'c is not compatible with type string 
